1.0.0
-----

* Add iframe id and name attributes as optional configs #99
* Add iframe sandbox attribute as optional config as suggested by @reefdog
* Add iframe allowfullscreen attribute as optional config #118
* Adhere to semantic versioning strategy
* Expose autoinit instances cleanup functionality
* Store autoinit instances for future reference
* From Hearken PR: Expose autoinit functionality
* From Hearken PR: Replace container node instead of appending in case is needed
* From Hearken PR: Add marking whether child is embedded or not with callback

0.4.6
-----

* Add title config parameter for better accessibility

0.4.5
-----

* Fix packaging/release screw up.

0.4.4
-----

* Add a Parent.remove() method to unbind events. (#82)
* Verify message data is a string before parsing. (#89)

0.4.3
-----

* Always pass parent url to child.

0.4.2
-----

* Implement scrollParentTo and navigateParentTo. (#84)
* Limit files installed by npm to necessary code. (#76)
* Use dist version of code for npm and bower. (#75)
* Ensure a config object always exists. (#72)

0.4.1
-----

* Update README and add contributors.

0.4.0
-----

* Fixed several broken examples.
* Support nested iframes correctly. (#59)
* Add browserify-supporting module definition. (#60)
* Add example for child polling.
* Support specifying parent id in child constructor. (#61, #62)

0.3.1
-----

* Add API documentation. (#52)
* Refactor public and private APIs to have more obvious names.
* Add support for generic message passing. (#49)
* Support specifying pym div's with data attributes. (#44)

0.1.1
-----

* UMD pattern support. (#42)

0.1.0
-----

* Initial release.